# stencil

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  dist-workspace.toml
.devcontainer/: devcontainer.Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build-release-artifacts.yml  create-release.yaml  tests.yaml
crates/stencil/: Cargo.toml
crates/stencil-error/: Cargo.toml
crates/stencil-error/src/: lib.rs
crates/stencil-rendering/: Cargo.toml
crates/stencil-rendering/src/: extract.rs  lib.rs  template_var.rs
crates/stencil-rendering/tests/: error_tests.rs  file.rs  integration_test.rs
crates/stencil-source/: Cargo.toml
crates/stencil-source/src/: config.rs  factory.rs  filesystem.rs  git.rs  lib.rs  model.rs
crates/stencil/src/: diff.rs  main.rs  output.rs  render.rs  target_config.rs
crates/stencil/src/source/: config.rs  filesystem.rs  git.rs  model.rs
src/: diff.rs  error.rs  main.rs  output.rs  render.rs  source.rs  target_config.rs
src/source/: config.rs  factory.rs  filesystem.rs  git.rs  mod.rs  model.rs
tests/: Dockerfile  lib.py  pytest.ini  requirements.txt  tests.py
tests/complete-stencil/stencil/: README.md.jinja  pyproject.toml.liquid
tests/stencil/: README.md.jinja  README.md.liquid  pyproject.toml.liquid
tests/stencil/.github/: CODEOWNERS
tests/stencil1_src/stencil/: README.md.liquid  pyproject.toml.liquid
tests/stencil2_src/stencil/: README.md.liquid
tests/stencil2_src/stencil/.github/: CODEOWNERS
tests/stencil2_src/stencil/tests/: test_example.py
tests/stencil2_src/stencil/{{project_name}}/: __version__.py
tests/stencils/complete/stencil/.github/: CODEOWNERS
tests/stencils/complete/stencil/{{project_name}}/: __init__.py.jinja
tests/stencils/stencil2_src/stencil/: README.md.jinja
tests/stencils/stencil2_src/stencil/tests/: test_example.py
