[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.83"
homepage = "https://github.com/dstanek/stencil"
documentation = "https://github.com/dstanek/stencil"
repository = "https://github.com/dstanek/stencil"
authors = ["David Stanek <dstanek@dstanek.com>"]
license = "MIT"
description = "Project templating engine"
keywords = ["template", "scaffolding", "project-generator", "boilerplate", "stencil", "project-maintenance"]
categories = ["development-tools::build-utils", "command-line-utilities"]
readme = "README.md"

[workspace.dependencies]
stencil-error = { path = "crates/stencil-error" }
stencil-rendering = { path = "crates/stencil-rendering" }
stencil-source = { path = "crates/stencil-source" }

minijinja = { version = "2.7.0", features = ["loader"] }
regex = "1.11.1"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.138"
textwrap = "0.16.1"
thiserror = "1.0.65"
toml = "0.8.19"
ureq = { version = "3.0.4", features = ["json"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.28.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
