[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.83"
homepage = "https://github.com/dstanek/stencil"
documentation = "https://github.com/dstanek/stencil"
repository = "https://github.com/dstanek/stencil"
authors = ["David Stanek <dstanek@dstanek.com>"]
license = "MIT"
description = "Project templating engine"
keywords = ["template", "scaffolding", "project-generator", "boilerplate", "stencil", "project-maintenance"]
categories = ["development-tools::build-utils", "command-line-utilities"]
readme = "README.md"

[workspace.dependencies]
stencil-error = { path = "crates/stencil-error" }
stencil-rendering = { path = "crates/stencil-rendering" }
stencil-source = { path = "crates/stencil-source" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
minijinja = { version = "2", features = ["loader"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
termcolor = "1"
textwrap = "<1"
thiserror = "2"
toml = "<1"
ureq = { version = "3", features = ["json"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.release]
publish = false # Prevent workspace from being published to crates.io
shared-version = true  # Only update workspace version
