[package]
name = "stencil-error"
description = "Common stencil errors"
version = {workspace = true}
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
thiserror = { workspace = true }
toml = { workspace = true }
