[package]
name = "stencil-rendering"
version = "0.0.1"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
minijinja = { workspace = true }
regex = { workspace = true }
textwrap = { workspace = true }
thiserror = { workspace = true }
