[package]
name = "stencil-rendering"
description = "Common template rendering code"
version = {workspace = true}
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
minijinja = { workspace = true }
regex = { workspace = true }
textwrap = { workspace = true }
thiserror = { workspace = true }
