[package]
name = "stencil-source"
version = "0.0.1"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
stencil-error = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
