[package]
name = "stencil-source"
description = "Code to find and load stencils"
version = "0.0.1"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
stencil-error = { workspace = true }
ureq = { workspace = true }
