[package]
name = "stencil"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
default-run = "stencil"

[dependencies]
anyhow = "1.0.91"
async-trait = "0.1.86"
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["derive"] }
liquid = "0.26.9"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.138"
similar = "2.6.0"
termcolor = "1.4.1"
thiserror = "1.0.65"
toml = "0.8.19"
ureq = { version = "3.0.4", features = ["json"] }
