[package]
name = "stencil"
description = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
default-run = "stencil"
categories = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }

[dependencies]
stencil-error = { workspace = true }
stencil-rendering = { workspace = true }
stencil-source = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
similar = { workspace = true }
termcolor = { workspace = true }
toml = { workspace = true }
